# python-template-instance

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pixi.toml  pyproject.toml
config/: config.yaml  config_prod.yaml
src/python_boilerplate/: __main__.py  main.py  util.py  version.py
tests/python_boilerplate/: test_main.py
