[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "python_boilerplate"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 140
include = ["src/**", "tests/**"]

[tool.ruff.lint]
select = [
  "F",    # flake8
  "I",    # isort
  "UP",   # pyupgrade
]


[tool.pytest.ini_options]
pythonpath = ["."]
